# infra-scratchpad

./: .flake8  .gitignore  README.md  bill_001.py  binary_001.py  body_message.py  bunker_computer.py  central_projector_morse.py  computer_screen_skin8.py  control_panel_007_screens_skin1.py  control_panel_007_screens_skin2.py  control_panel_007_screens_skin3.py  control_panel_puzzle_ultimate_alternative.py  keypad_003.py  lint.ps1  lint.sh  mailbox_skin2.py  metro_control_panel_001_pegboard.py  morse.py  oskutin_zuntti.py  pyproject.toml  run-all.ps1  run-all.sh  scientific_table_001_skin3.py  sign_07_skin10.py  utils.py  wasteland.py  wasteland_notes_001.py  wasteland_radio_morse.py
audio/: __init__.py  central_projector_morse.py  opensewer_radio_behind_door_001.py  opensewer_radio_broken_001.py  video_1.py  wasteland_radio_001.py  wasteland_radio_morse.py
infra/: __init__.py  bigram_frq_en.csv  binary.py  cblw_scores_en.csv  ccit2.py  ccitt2.py  dict.py  letter_frq_en.csv  morse.py  nla.py  output.py  stats.py  string.py  transposition.py  utils.py
other/: __init__.py  body_message.py  bunker_computer.py  oskutin_zuntti.py
textures/: __init__.py  bill_001.py  binary_001.py  bookset_skin1.py  bookset_skin_1.py  computer_screen_skin8.py  control_panel_007_screens_skin1.py  control_panel_007_screens_skin3.py  control_panel_puzzle_ultimate_alternative.py  control_panel_puzzle_ultimate_alternative_wip.py  fuses_02.py  hartman_woodbox.py  keypad_003.py  mailbox_skin2.py  metro_control_panel_001_pegboard.py  metro_control_panel_001_pegboard_wip.py  sign_07_skin10.py  (+6 more)
(+10 files in other folders)
