[tool.poetry]
name = "infra-scratchpad"
version = "0.1.0"
description = "collection of scripts related to the infra arg (https://stalburg.net/ARG_Portal)"
authors = []

[tool.poetry.dependencies]
python = "^3.8"
termcolor = "*"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pydocstyle = "*"
pytest = "*"

flake8 = "*"
flake8-black = "*"
flake8-coding = "*"
flake8-commas = "*"
flake8-isort = "*"
flake8-quotes = "*"

toml = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
target_version = ["py38"]
line-length = 120

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.pydocstyle]
match-dir = "(?!venv).*"
